Fix for 1742359: Provision button not aligned with dropdown
Tested in Chrome, Firedfox, Safari.
Reviewed-on: http://bellevue-ci.eng.vmware.com:8080/3115
Bellevue-Verified: jenkins <jenkins@vmware.com>
CS-Verified: jenkins <jenkins@vmware.com>

--- a/ui/app/src/styles/components/_list-views.scss
+++ b/ui/app/src/styles/components/_list-views.scss
@@ -412,8 +412,6 @@
   }
   .list-view .image-item .btn-group > .admiral-btn.dropdown-toggle {
     color: $secondary_hint_title_color;
-    padding: 0 12px 0 8px;
-    line-height: 30px;
   }
   .list-view .image-item .btn-group > .admiral-btn.dropdown-toggle .caret {
     width: 0;
